[WebKit2] Initialize threading in UI process. https://bugs.webkit.org/show_bug.cgi?id=70127

Reviewed by Anders Carlsson.

* CMakeLists.txt:
* GNUmakefile.am:
* Shared/APIObject.cpp: Added.
(WebKit::APIObject::APIObject):
* Shared/APIObject.h:
* Target.pri:
* WebKit2.xcodeproj/project.pbxproj:
* win/WebKit2.vcproj:

Canonical link: https://commits.webkit.org/90759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102346 268f45cc-cd09-0410-ab3c-d52691b4dbfc